--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h2>Esto es la pagina principal</h2>
     <p>Esta pagina está creada unicamente para que <b>github.io</b> funcione.</p>
+    <a href="lovepage/index.html"></a>
 </body>
 </html>
