--- a/index.html
+++ b/index.html
@@ -4,10 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Esto es la pagina principal</h2>
-    <p>Esta pagina está creada unicamente para que <b>github.io</b> funcione.</p>
-    <a href="lovepage/index.html">love</a>
+
+    <div id="contenidoTotal">
+        <header>
+            JOSACA
+        </header>
+        <main>
+            MIS PROYECTOS
+            <div class="proyectos">
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+                <div class="proyecto">
+                    <a href="lovepage/index.html">love</a>
+                </div>
+            </div>
+        </main>
+    </div>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
