--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="my-scrollbar" lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <div id="contenidoTotal">
@@ -57,4 +59,5 @@
 
     <script src="scripts.js"></script>
 </body>
+
 </html>
