--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             MIS PROYECTOS
             <div class="proyectos">
                 <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
+                    <a href="conecta-cuatro/index.html">conecta-cuatro</a>
                 </div>
                 <div class="proyecto">
                     <a href="lovepage/index.html">love</a>
