conectaCuatro cambios esteticos

--- a/conecta-cuatro/index.html
+++ b/conecta-cuatro/index.html
@@ -8,6 +8,25 @@
 
 </head>
 <body>
+    <div id="avisocaja">
+        <div id="aviso">
+            <h1>Aviso</h1>
+            <p>
+                El juego de conecta cuatro es un juego de mesa en el que dos jugadores se enfrentan para
+                conectar cuatro fichas de su color en una línea horizontal, vertical o diagonal.
+            </p>
+            <p>
+                El jugador que consiga conectar cuatro fichas de su color gana la partida.
+            </p>
+            <div>
+                <span>Jugador 1</span><span>Jugador 2</span>
+            </div>
+            <div>
+                <img src="resources/click.png" alt="click"><img src="resources/keyboard.png" alt="teclado">
+            </div>
+            <button id="aceptar">Aceptar</button>
+        </div>
+    </div>
     <div class="content">
 
         <div class="banner">
