update para ver dnipass

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                     <a href="lovepage/index.html">love</a>
                 </div>
             </div>
+
+            <a href="registroDNIPASSWORD/index.html"></a>
         </main>
     </div>
 
