--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <a href="registroDNIPASSWORD/index.html"></a>
+            <a href="registroDNIPASSWORD/index.html">dnipass</a>
         </main>
     </div>
 
