Pagina de Jokasa

--- a/index.html
+++ b/index.html
@@ -10,56 +10,13 @@
 
 <body>
 
-    <div id="contenidoTotal">
-        <header>
-            JOSACA
-        </header>
+    <div id="content">
         <main>
-            MIS PROYECTOS
-            <div class="proyectos">
-                <div class="proyecto">
-                    <a href="conecta-cuatro/index.html">conecta-cuatro</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-                <div class="proyecto">
-                    <a href="lovepage/index.html">love</a>
-                </div>
-            </div>
-
-            <a href="registroDNIPASSWORD/index.html">dnipass</a>
+            <span id="mycontent">PAGINA WEB DE JOKASA</span>
         </main>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
