ejercicio para alejandro

--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
-<html id="my-scrollbar" lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PAGINA WEB DE JOKASA</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-    <div id="content">
+    <div class="content">
         <main>
             <span id="mycontent">PAGINA WEB DE JOKASA</span>
+        </main>
+    </div>
+
+    <div class="content">
+        <main id="ejercicios-basicos">
+            <h2>Ejercicios para Alejandro</h2>
+            <div>
+                <a href="ejercicio1/index.html">Ejercicio 1</a>
+                <a onclick="noDisponible()">Ejercicio 2</a>
+                <a onclick="noDisponible()">Ejercicio 3</a>
+                <a onclick="noDisponible()">Ejercicio 4</a>
+                <a onclick="noDisponible()">Ejercicio 5</a>
+            </div>
         </main>
     </div>
 
